<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/image_background"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="35sp"
                    android:background="@drawable/register"
                    android:text="@string/register" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
                tools:layout_editor_absoluteX="10dp">


                <EditText
                    android:id="@+id/first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="First"
                    android:inputType="textPersonName"
                    tools:layout_editor_absoluteX="28dp"
                    tools:layout_editor_absoluteY="108dp"
                    android:layout_marginStart="10dp" />

                <EditText
                    android:id="@+id/last"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Last"
                    android:inputType="textPersonName"
                    tools:layout_editor_absoluteX="58dp"
                    tools:layout_editor_absoluteY="192dp" />

            </LinearLayout>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                tools:layout_editor_absoluteX="10dp" />


            <EditText
                android:id="@+id/password"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/login_password"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/email"
                tools:layout_editor_absoluteX="72dp"
                />


            <EditText
                android:id="@+id/repassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/login_repassword"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/password"
                tools:layout_editor_absoluteX="72dp" />








            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:text="@string/login_conditions"
                android:buttonTint="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
                tools:layout_editor_absoluteX="16dp" />

            <Button
                android:id="@+id/Reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="CONTINUE"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="20dp"
                app:layout_constraintTop_toBottomOf="@+id/checkBox"
                tools:layout_editor_absoluteX="167dp" />
        </LinearLayout>


    </ScrollView>

</android.support.constraint.ConstraintLayout>